--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,5 +1,6 @@
 {
     "presets": ["@babel/env"],
     "plugins": ["@babel/plugin-transform-arrow-functions", "minify-mangle-names"],
-    "compact": true
+    "compact": true,
+    "comments": false
 }
